// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImportProcessStateIcon Correct ICON_STATUS_FAILED is rendered for completed 0 - {"errored":true,"parsingErrors":true,"parsingWarnings":true} 1`] = `
<svg
  class="MuiSvgIcon-root MuiSvgIcon-colorError MuiSvgIcon-fontSizeMedium css-13bdyef-MuiSvgIcon-root"
  data-testid="icon-status-failed-bae86ed9-33bf-4492-a0e2-f9c8bd112bae"
  focusable="false"
  role="img"
  viewBox="0 0 24 24"
>
  <path
    d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
  />
  <title>
    Completed with error(s)
  </title>
</svg>
`;

exports[`ImportProcessStateIcon Correct ICON_STATUS_FAILED is rendered for completed 1 - {"errored":true,"parsingErrors":true,"parsingWarnings":false} 1`] = `
<svg
  class="MuiSvgIcon-root MuiSvgIcon-colorError MuiSvgIcon-fontSizeMedium css-13bdyef-MuiSvgIcon-root"
  data-testid="icon-status-failed-bae86ed9-33bf-4492-a0e2-f9c8bd112bae"
  focusable="false"
  role="img"
  viewBox="0 0 24 24"
>
  <path
    d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
  />
  <title>
    Completed with error(s)
  </title>
</svg>
`;

exports[`ImportProcessStateIcon Correct ICON_STATUS_FAILED is rendered for completed 2 - {"errored":true,"parsingErrors":false,"parsingWarnings":true} 1`] = `
<svg
  class="MuiSvgIcon-root MuiSvgIcon-colorError MuiSvgIcon-fontSizeMedium css-13bdyef-MuiSvgIcon-root"
  data-testid="icon-status-failed-bae86ed9-33bf-4492-a0e2-f9c8bd112bae"
  focusable="false"
  role="img"
  viewBox="0 0 24 24"
>
  <path
    d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
  />
  <title>
    Completed with error(s)
  </title>
</svg>
`;

exports[`ImportProcessStateIcon Correct ICON_STATUS_FAILED is rendered for completed 3 - {"errored":true,"parsingErrors":false,"parsingWarnings":false} 1`] = `
<svg
  class="MuiSvgIcon-root MuiSvgIcon-colorError MuiSvgIcon-fontSizeMedium css-13bdyef-MuiSvgIcon-root"
  data-testid="icon-status-failed-bae86ed9-33bf-4492-a0e2-f9c8bd112bae"
  focusable="false"
  role="img"
  viewBox="0 0 24 24"
>
  <path
    d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
  />
  <title>
    Completed with error(s)
  </title>
</svg>
`;

exports[`ImportProcessStateIcon Correct ICON_STATUS_FAILED is rendered for completed 4 - {"errored":false,"parsingErrors":true,"parsingWarnings":true} 1`] = `
<svg
  class="MuiSvgIcon-root MuiSvgIcon-colorWarning MuiSvgIcon-fontSizeMedium css-h6esa3-MuiSvgIcon-root"
  data-testid="icon-status-failed-bae86ed9-33bf-4492-a0e2-f9c8bd112bae"
  focusable="false"
  role="img"
  viewBox="0 0 24 24"
>
  <path
    d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
  />
  <title>
    Completed with parsing errors(s)
  </title>
</svg>
`;

exports[`ImportProcessStateIcon Correct ICON_STATUS_FAILED is rendered for completed 5 - {"errored":false,"parsingErrors":true,"parsingWarnings":false} 1`] = `
<svg
  class="MuiSvgIcon-root MuiSvgIcon-colorWarning MuiSvgIcon-fontSizeMedium css-h6esa3-MuiSvgIcon-root"
  data-testid="icon-status-failed-bae86ed9-33bf-4492-a0e2-f9c8bd112bae"
  focusable="false"
  role="img"
  viewBox="0 0 24 24"
>
  <path
    d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
  />
  <title>
    Completed with parsing errors(s)
  </title>
</svg>
`;

exports[`ImportProcessStateIcon Correct ICON_STATUS_FAILED is rendered for completed 6 - {"errored":false,"parsingErrors":false,"parsingWarnings":true} 1`] = `
<svg
  class="MuiSvgIcon-root MuiSvgIcon-colorWarning MuiSvgIcon-fontSizeMedium css-h6esa3-MuiSvgIcon-root"
  data-testid="icon-status-failed-bae86ed9-33bf-4492-a0e2-f9c8bd112bae"
  focusable="false"
  role="img"
  viewBox="0 0 24 24"
>
  <path
    d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
  />
  <title>
    Completed with parsing warning(s)
  </title>
</svg>
`;

exports[`ImportProcessStateIcon Correct ICON_STATUS_SUCCESS is rendered for completed 0 - {"errored":false,"parsingErrors":false,"parsingWarnings":false} 1`] = `
<svg
  class="MuiSvgIcon-root MuiSvgIcon-colorSuccess MuiSvgIcon-fontSizeMedium css-1x9cg3q-MuiSvgIcon-root"
  data-testid="icon-status-success-bae86ed9-33bf-4492-a0e2-f9c8bd112bae"
  focusable="false"
  role="img"
  viewBox="0 0 24 24"
>
  <path
    d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
  />
  <title>
    Completed succesfully
  </title>
</svg>
`;

exports[`ImportProcessStateIcon Correct ICON_STATUS_SUCCESS is rendered for pending 0 - {"errored":true,"parsingErrors":true,"parsingWarnings":true} 1`] = `
<svg
  class="MuiSvgIcon-root MuiSvgIcon-colorInfo MuiSvgIcon-fontSizeMedium css-14fk8m9-MuiSvgIcon-root"
  data-testid="icon-status-pending-bae86ed9-33bf-4492-a0e2-f9c8bd112bae"
  focusable="false"
  role="img"
  viewBox="0 0 24 24"
>
  <path
    d="M12 2C6.5 2 2 6.5 2 12s4.5 10 10 10 10-4.5 10-10S17.5 2 12 2zm4.2 14.2L11 13V7h1.5v5.2l4.5 2.7-.8 1.3z"
  />
  <title>
    Pending
  </title>
</svg>
`;

exports[`ImportProcessStateIcon Correct ICON_STATUS_SUCCESS is rendered for pending 1 - {"errored":true,"parsingErrors":true,"parsingWarnings":false} 1`] = `
<svg
  class="MuiSvgIcon-root MuiSvgIcon-colorInfo MuiSvgIcon-fontSizeMedium css-14fk8m9-MuiSvgIcon-root"
  data-testid="icon-status-pending-bae86ed9-33bf-4492-a0e2-f9c8bd112bae"
  focusable="false"
  role="img"
  viewBox="0 0 24 24"
>
  <path
    d="M12 2C6.5 2 2 6.5 2 12s4.5 10 10 10 10-4.5 10-10S17.5 2 12 2zm4.2 14.2L11 13V7h1.5v5.2l4.5 2.7-.8 1.3z"
  />
  <title>
    Pending
  </title>
</svg>
`;

exports[`ImportProcessStateIcon Correct ICON_STATUS_SUCCESS is rendered for pending 2 - {"errored":true,"parsingErrors":false,"parsingWarnings":true} 1`] = `
<svg
  class="MuiSvgIcon-root MuiSvgIcon-colorInfo MuiSvgIcon-fontSizeMedium css-14fk8m9-MuiSvgIcon-root"
  data-testid="icon-status-pending-bae86ed9-33bf-4492-a0e2-f9c8bd112bae"
  focusable="false"
  role="img"
  viewBox="0 0 24 24"
>
  <path
    d="M12 2C6.5 2 2 6.5 2 12s4.5 10 10 10 10-4.5 10-10S17.5 2 12 2zm4.2 14.2L11 13V7h1.5v5.2l4.5 2.7-.8 1.3z"
  />
  <title>
    Pending
  </title>
</svg>
`;

exports[`ImportProcessStateIcon Correct ICON_STATUS_SUCCESS is rendered for pending 3 - {"errored":true,"parsingErrors":false,"parsingWarnings":false} 1`] = `
<svg
  class="MuiSvgIcon-root MuiSvgIcon-colorInfo MuiSvgIcon-fontSizeMedium css-14fk8m9-MuiSvgIcon-root"
  data-testid="icon-status-pending-bae86ed9-33bf-4492-a0e2-f9c8bd112bae"
  focusable="false"
  role="img"
  viewBox="0 0 24 24"
>
  <path
    d="M12 2C6.5 2 2 6.5 2 12s4.5 10 10 10 10-4.5 10-10S17.5 2 12 2zm4.2 14.2L11 13V7h1.5v5.2l4.5 2.7-.8 1.3z"
  />
  <title>
    Pending
  </title>
</svg>
`;

exports[`ImportProcessStateIcon Correct ICON_STATUS_SUCCESS is rendered for pending 4 - {"errored":false,"parsingErrors":true,"parsingWarnings":true} 1`] = `
<svg
  class="MuiSvgIcon-root MuiSvgIcon-colorInfo MuiSvgIcon-fontSizeMedium css-14fk8m9-MuiSvgIcon-root"
  data-testid="icon-status-pending-bae86ed9-33bf-4492-a0e2-f9c8bd112bae"
  focusable="false"
  role="img"
  viewBox="0 0 24 24"
>
  <path
    d="M12 2C6.5 2 2 6.5 2 12s4.5 10 10 10 10-4.5 10-10S17.5 2 12 2zm4.2 14.2L11 13V7h1.5v5.2l4.5 2.7-.8 1.3z"
  />
  <title>
    Pending
  </title>
</svg>
`;

exports[`ImportProcessStateIcon Correct ICON_STATUS_SUCCESS is rendered for pending 5 - {"errored":false,"parsingErrors":true,"parsingWarnings":false} 1`] = `
<svg
  class="MuiSvgIcon-root MuiSvgIcon-colorInfo MuiSvgIcon-fontSizeMedium css-14fk8m9-MuiSvgIcon-root"
  data-testid="icon-status-pending-bae86ed9-33bf-4492-a0e2-f9c8bd112bae"
  focusable="false"
  role="img"
  viewBox="0 0 24 24"
>
  <path
    d="M12 2C6.5 2 2 6.5 2 12s4.5 10 10 10 10-4.5 10-10S17.5 2 12 2zm4.2 14.2L11 13V7h1.5v5.2l4.5 2.7-.8 1.3z"
  />
  <title>
    Pending
  </title>
</svg>
`;

exports[`ImportProcessStateIcon Correct ICON_STATUS_SUCCESS is rendered for pending 6 - {"errored":false,"parsingErrors":false,"parsingWarnings":true} 1`] = `
<svg
  class="MuiSvgIcon-root MuiSvgIcon-colorInfo MuiSvgIcon-fontSizeMedium css-14fk8m9-MuiSvgIcon-root"
  data-testid="icon-status-pending-bae86ed9-33bf-4492-a0e2-f9c8bd112bae"
  focusable="false"
  role="img"
  viewBox="0 0 24 24"
>
  <path
    d="M12 2C6.5 2 2 6.5 2 12s4.5 10 10 10 10-4.5 10-10S17.5 2 12 2zm4.2 14.2L11 13V7h1.5v5.2l4.5 2.7-.8 1.3z"
  />
  <title>
    Pending
  </title>
</svg>
`;

exports[`ImportProcessStateIcon Correct ICON_STATUS_SUCCESS is rendered for pending 7 - {"errored":false,"parsingErrors":false,"parsingWarnings":false} 1`] = `
<svg
  class="MuiSvgIcon-root MuiSvgIcon-colorInfo MuiSvgIcon-fontSizeMedium css-14fk8m9-MuiSvgIcon-root"
  data-testid="icon-status-pending-bae86ed9-33bf-4492-a0e2-f9c8bd112bae"
  focusable="false"
  role="img"
  viewBox="0 0 24 24"
>
  <path
    d="M12 2C6.5 2 2 6.5 2 12s4.5 10 10 10 10-4.5 10-10S17.5 2 12 2zm4.2 14.2L11 13V7h1.5v5.2l4.5 2.7-.8 1.3z"
  />
  <title>
    Pending
  </title>
</svg>
`;

exports[`ImportProcessStateIcon Correct ICON_STATUS_SUCCESS is rendered for running 0 - {"errored":true,"parsingErrors":true,"parsingWarnings":true} 1`] = `
<svg
  class="MuiSvgIcon-root MuiSvgIcon-colorInfo MuiSvgIcon-fontSizeMedium css-1wn4sen-MuiSvgIcon-root"
  data-testid="icon-status-running-bae86ed9-33bf-4492-a0e2-f9c8bd112bae"
  focusable="false"
  role="img"
  viewBox="0 0 24 24"
>
  <path
    d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2z"
  />
  <title>
    Running
  </title>
</svg>
`;

exports[`ImportProcessStateIcon Correct ICON_STATUS_SUCCESS is rendered for running 1 - {"errored":true,"parsingErrors":true,"parsingWarnings":false} 1`] = `
<svg
  class="MuiSvgIcon-root MuiSvgIcon-colorInfo MuiSvgIcon-fontSizeMedium css-1wn4sen-MuiSvgIcon-root"
  data-testid="icon-status-running-bae86ed9-33bf-4492-a0e2-f9c8bd112bae"
  focusable="false"
  role="img"
  viewBox="0 0 24 24"
>
  <path
    d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2z"
  />
  <title>
    Running
  </title>
</svg>
`;

exports[`ImportProcessStateIcon Correct ICON_STATUS_SUCCESS is rendered for running 2 - {"errored":true,"parsingErrors":false,"parsingWarnings":true} 1`] = `
<svg
  class="MuiSvgIcon-root MuiSvgIcon-colorInfo MuiSvgIcon-fontSizeMedium css-1wn4sen-MuiSvgIcon-root"
  data-testid="icon-status-running-bae86ed9-33bf-4492-a0e2-f9c8bd112bae"
  focusable="false"
  role="img"
  viewBox="0 0 24 24"
>
  <path
    d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2z"
  />
  <title>
    Running
  </title>
</svg>
`;

exports[`ImportProcessStateIcon Correct ICON_STATUS_SUCCESS is rendered for running 3 - {"errored":true,"parsingErrors":false,"parsingWarnings":false} 1`] = `
<svg
  class="MuiSvgIcon-root MuiSvgIcon-colorInfo MuiSvgIcon-fontSizeMedium css-1wn4sen-MuiSvgIcon-root"
  data-testid="icon-status-running-bae86ed9-33bf-4492-a0e2-f9c8bd112bae"
  focusable="false"
  role="img"
  viewBox="0 0 24 24"
>
  <path
    d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2z"
  />
  <title>
    Running
  </title>
</svg>
`;

exports[`ImportProcessStateIcon Correct ICON_STATUS_SUCCESS is rendered for running 4 - {"errored":false,"parsingErrors":true,"parsingWarnings":true} 1`] = `
<svg
  class="MuiSvgIcon-root MuiSvgIcon-colorInfo MuiSvgIcon-fontSizeMedium css-1wn4sen-MuiSvgIcon-root"
  data-testid="icon-status-running-bae86ed9-33bf-4492-a0e2-f9c8bd112bae"
  focusable="false"
  role="img"
  viewBox="0 0 24 24"
>
  <path
    d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2z"
  />
  <title>
    Running
  </title>
</svg>
`;

exports[`ImportProcessStateIcon Correct ICON_STATUS_SUCCESS is rendered for running 5 - {"errored":false,"parsingErrors":true,"parsingWarnings":false} 1`] = `
<svg
  class="MuiSvgIcon-root MuiSvgIcon-colorInfo MuiSvgIcon-fontSizeMedium css-1wn4sen-MuiSvgIcon-root"
  data-testid="icon-status-running-bae86ed9-33bf-4492-a0e2-f9c8bd112bae"
  focusable="false"
  role="img"
  viewBox="0 0 24 24"
>
  <path
    d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2z"
  />
  <title>
    Running
  </title>
</svg>
`;

exports[`ImportProcessStateIcon Correct ICON_STATUS_SUCCESS is rendered for running 6 - {"errored":false,"parsingErrors":false,"parsingWarnings":true} 1`] = `
<svg
  class="MuiSvgIcon-root MuiSvgIcon-colorInfo MuiSvgIcon-fontSizeMedium css-1wn4sen-MuiSvgIcon-root"
  data-testid="icon-status-running-bae86ed9-33bf-4492-a0e2-f9c8bd112bae"
  focusable="false"
  role="img"
  viewBox="0 0 24 24"
>
  <path
    d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2z"
  />
  <title>
    Running
  </title>
</svg>
`;

exports[`ImportProcessStateIcon Correct ICON_STATUS_SUCCESS is rendered for running 7 - {"errored":false,"parsingErrors":false,"parsingWarnings":false} 1`] = `
<svg
  class="MuiSvgIcon-root MuiSvgIcon-colorInfo MuiSvgIcon-fontSizeMedium css-1wn4sen-MuiSvgIcon-root"
  data-testid="icon-status-running-bae86ed9-33bf-4492-a0e2-f9c8bd112bae"
  focusable="false"
  role="img"
  viewBox="0 0 24 24"
>
  <path
    d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2z"
  />
  <title>
    Running
  </title>
</svg>
`;
